fix: Blockquotes wrap around floating images

--- a/.theme/foundation.css
+++ b/.theme/foundation.css
@@ -170,10 +170,6 @@ BLOCKQUOTES */
   display: grid;
 }
 
-blockquote p {
-  display: grid;
-}
-
 /*----------------------------------------------------------------
 IMAGES */
 
